# interview-task-backend

./: .dockerignore  .env.example  Dockerfile  README.md  cron-entrypoint.sh  crontab  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  wsgi.py
app/: __init__.py  config.py  db.py  errors.py  models.py  routes.py
app/adapters/: central_bank.py  google_spreadsheet.py  telegram_bot.py
app/entities/currency/: model.py  repository.py  schema.py  service.py
app/entities/order/: controller.py  model.py  repository.py  schema.py  service.py
app/rest_lib/: controller.py  repository.py  service.py
app/scripts/: check_delivery_delays.py  recreate_db.py  update_exchange_rate.py  update_orders.py
frontend/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json
frontend/src/: App.module.css  App.tsx
frontend/src/components/Chart/: api.ts  index.module.css  index.tsx
frontend/src/components/Header/: index.module.css  index.tsx
frontend/src/components/Table/: api.ts  index.module.css  index.tsx
migrations/: env.py
migrations/versions/: 24696593b758_add_rubble_cost_to_orders.py  7b35fd11cbc8_init.py
